imagefield changes and others tt

--- a/store/templates/blog.html
+++ b/store/templates/blog.html
@@ -1,37 +1,6 @@
 {% load staticfiles %}
 
 
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Electro</title>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Elctro shop project">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<link rel="stylesheet" type="text/css" href='{% static "/styles/bootstrap4/bootstrap.min.css" %}'>
-	<link href='{% static "/plugins/fontawesome-free-5.0.1/css/fontawesome-all.css" %}' rel="stylesheet" type="text/css">
-	
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/owl.carousel.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/owl.theme.default.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/OwlCarousel2-2.2.1/animate.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/plugins/slick-1.8.0/slick.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/styles/main_styles.css" %}'>
-    <link rel="stylesheet" type="text/css" href='{% static "/styles/responsive.css" %}'>
-    <link rel="stylesheet" type="text/css" href='{% static "/plugins/jquery-ui-1.12.1.custom/jquery-ui.css" %}'>
-
-
-
-
-
-
-
-
-	<link rel="stylesheet" type="text/css" href='{% static "/styles/blog_responsive.css" %}'>
-	<link rel="stylesheet" type="text/css" href='{% static "/styles/blog_styles.css" %}'>
-
 {% include "header.html" %}
 	
 	<!-- Home -->
@@ -54,66 +23,49 @@
 						
 						<!-- Blog post -->
 						<div class="blog_post">
-							<div class="blog_image" style="background-image:url(images/blog_1.jpg)"></div>
-							<div class="blog_text">Vivamus sed nunc in arcu cursus mollis quis et orci. Interdum et malesuada.</div>
-							<div class="blog_button"><a href="/blog/blog_single">Continue Reading</a></div>
-						</div>
-
-						<!-- Blog post -->
-						<div class="blog_post">
-							<div class="blog_image" style="background-image:url(images/blog_2.jpg)"></div>
-							<div class="blog_text">Cras lobortis nisl nec libero pulvinar lacinia. Nunc sed ullamcorper massa.</div>
-							<div class="blog_button"><a href="/blog/blog_single">Continue Reading</a></div>
-						</div>
-
-						<!-- Blog post -->
-						<div class="blog_post">
-							<div class="blog_image" style="background-image:url(images/blog_3.jpg)"></div>
-							<div class="blog_text">Fusce tincidunt nulla magna, ac euismod quam viverra id. Fusce eget metus feugiat</div>
-							<div class="blog_button"><a href="/blog/blog_single">Continue Reading</a></div>
-						</div>
-
-						<!-- Blog post -->
-						<div class="blog_post">
-							<div class="blog_image" style="background-image:url(images/blog_4.jpg)"></div>
+							<div class="blog_image" style="background-image:url('{% static "/images/blog_1.jpg"%}')"></div>
 							<div class="blog_text">Etiam leo nibh, consectetur nec orci et, tempus tempus ex</div>
-							<div class="blog_button"><a href="blog_single">Continue Reading</a></div>
+							<div class="blog_button">
+								<a href="/blog/">Continue Reading</a>
+							</div>
 						</div>
 
 						<!-- Blog post -->
 						<div class="blog_post">
-							<div class="blog_image" style="background-image:url(images/blog_5.jpg)"></div>
-							<div class="blog_text">Sed viverra pellentesque dictum. Aenean ligula justo, viverra in lacus porttitor</div>
-							<div class="blog_button"><a href="blog_single">Continue Reading</a></div>
-						</div>
+								<div class="blog_image" style="background-image:url('{% static "/images/blog_2.jpg"%}')"></div>
+								<div class="blog_text">Etiam leo nibh, consectetur nec orci et, tempus tempus ex</div>
+								<div class="blog_button">
+									<a href="/blog/">Continue Reading</a>
+								</div>
+							</div>
 
-						<!-- Blog post -->
-						<div class="blog_post">
-							<div class="blog_image" style="background-image:url(images/blog_6.jpg)"></div>
-							<div class="blog_text">In nisl tortor, tempus nec ex vitae, bibendum rutrum mi. Integer tempus nisi</div>
-							<div class="blog_button"><a href="blog_single">Continue Reading</a></div>
-						</div>
 
-						<!-- Blog post -->
+							<!-- Blog post -->
 						<div class="blog_post">
-							<div class="blog_image" style="background-image:url(images/blog_7.jpg)"></div>
-							<div class="blog_text">Make Life Easier on Yourself by Accepting “Good Enough.” Don’t Pursue Perfection.</div>
-							<div class="blog_button"><a href="blog_single">Continue Reading</a></div>
-						</div>
+								<div class="blog_image" style="background-image:url('{% static "/images/blog_3.jpg"%}')"></div>
+								<div class="blog_text">Etiam leo nibh, consectetur nec orci et, tempus tempus ex</div>
+								<div class="blog_button">
+									<a href="/blog/">Continue Reading</a>
+								</div>
+							</div>
 
-						<!-- Blog post -->
+							<!-- Blog post -->
 						<div class="blog_post">
-							<div class="blog_image" style="background-image:url(images/blog_8.jpg)"></div>
-							<div class="blog_text">13 Reasons You Are Failing At Life And Becoming A Bum</div>
-							<div class="blog_button"><a href="blog_single">Continue Reading</a></div>
-						</div>
+								<div class="blog_image" style="background-image:url('{% static "/images/blog_4.jpg"%}')"></div>
+								<div class="blog_text">Etiam leo nibh, consectetur nec orci et, tempus tempus ex</div>
+								<div class="blog_button">
+									<a href="/blog/">Continue Reading</a>
+								</div>
+							</div>
 
-						<!-- Blog post -->
+							<!-- Blog post -->
 						<div class="blog_post">
-							<div class="blog_image" style="background-image:url(images/blog_9.jpg)"></div>
-							<div class="blog_text">4 Steps to Getting Anything You Want In Life</div>
-							<div class="blog_button"><a href="blog_single">Continue Reading</a></div>
-						</div>
+								<div class="blog_image" style="background-image:url('{% static "/images/blog_5.jpg"%}')"></div>
+								<div class="blog_text">Etiam leo nibh, consectetur nec orci et, tempus tempus ex</div>
+								<div class="blog_button">
+									<a href="/blog/">Continue Reading</a>
+								</div>
+							</div>
 						
 					</div>
 				</div>
