--- a/store/templates/footer.html
+++ b/store/templates/footer.html
@@ -132,14 +132,14 @@
 <script src='{% static "/plugins/slick-1.8.0/slick.js" %}'></script>
 <script src='{% static "/plugins/easing/easing.js" %}'></script>
 <script src='{% static "/js/custom.js" %}'></script>
-<!-- product custmer js file 
+<!-- product custmer js file -->	
 <script src='{% static "/js/product_custom.js" %}'></script>
 
-< shop custmer js file 
+<!-- shop custmer js file -->
 <script src='{% static "/plugins/Isotope/isotope.pkgd.min.js" %}'></script>
 <script src='{% static "/plugins/jquery-ui-1.12.1.custom/jquery-ui.js" %}'></script>
 <script src='{% static "/plugins/parallax-js-master/parallax.min.js" %}'></script>
-<script src='{% static "/js/shop_custom.js" %}'></script>-->
+<script src='{% static "/js/shop_custom.js" %}'></script>
 
 </body>
 
