--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -368,8 +368,6 @@
 
 
 
-
-
 	<!-- Popular Categories -->
 
 	<div class="popular_categories">
@@ -541,11 +539,8 @@
 	<div class="adverts">
 		<div class="container">
 			<div class="row">
-
 				<div class="col-lg-4 advert_col">
-					
 					<!-- Advert Item -->
-
 					<div class="advert d-flex flex-row align-items-center justify-content-start">
 						<div class="advert_content">
 							<div class="advert_title"><a href="#">Trends 2018</a></div>
@@ -563,10 +558,11 @@
 		</div>
 	</div>
 
+
 	<!-- Trends -->
 
 	<div class="trends">
-		<div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
+		<div class="trends_background" style="background-image:url('{% static "/images/trends_background.jpg" %}')"></div>
 		<div class="trends_overlay"></div>
 		<div class="container">
 			<div class="row">
