--- a/store/templates/header.html
+++ b/store/templates/header.html
@@ -18,7 +18,11 @@
 	<link rel="stylesheet" type="text/css" href='{% static "/plugins/slick-1.8.0/slick.css" %}'>
 	<link rel="stylesheet" type="text/css" href='{% static "/styles/main_styles.css" %}'>
     <link rel="stylesheet" type="text/css" href='{% static "/styles/responsive.css" %}'>
-    <link rel="stylesheet" type="text/css" href='{% static "/plugins/jquery-ui-1.12.1.custom/jquery-ui.css" %}'>
+	<link rel="stylesheet" type="text/css" href='{% static "/plugins/jquery-ui-1.12.1.custom/jquery-ui.css" %}'>
+	
+	<link rel="stylesheet" type="text/css" href='{% static "/styles/blog_responsive.css" %}'>
+	<link rel="stylesheet" type="text/css" href='{% static "/styles/blog_styles.css" %}'>
+
 </head>
 
 <body>
@@ -87,8 +91,8 @@
 						<div class="header_search">
 							<div class="header_search_content">
 								<div class="header_search_form_container">
-									<form action="#" class="header_search_form clearfix">
-										<input type="search" required="required" class="header_search_input" placeholder="Search for products...">
+									<form action="" method="GET" class="header_search_form clearfix">
+										<input type="search" name="query" value='{{request.GET.query}}' required="required" class="header_search_input" placeholder="Search for products...">
 										<div class="custom_dropdown">
 											<div class="custom_dropdown_list">
 												<span class="custom_dropdown_placeholder clc">All Categories</span>
