make some changes for panier and the main page

--- a/store/templates/header.html
+++ b/store/templates/header.html
@@ -132,11 +132,15 @@
 								<div class="cart_container d-flex flex-row align-items-center justify-content-end">
 									<div class="cart_icon">
 										<img src='{% static "/images/cart.png" %}' alt="">
-										<div class="cart_count"><span>10</span></div>
+										<div class="cart_count">
+											<span>{{ panier|length }}</span>
+										</div>
 									</div>
 									<div class="cart_content">
-										<div class="cart_text"><a href="/cart">Cart</a></div>
-										<div class="cart_price">$85</div>
+										<div class="cart_text">
+											<a href="/cart">Cart</a>
+										</div>
+										<div class="cart_price">{{panier.qte}}</div>
 									</div>
 								</div>
 							</div>
@@ -214,31 +218,57 @@
 											</ul>
 										</li>
 										<li class="hassubs">
-											<a href="#">Featured Brands<i class="fas fa-chevron-down"></i></a>
+											<a href="#"> Brands
+												<i class="fas fa-chevron-down"></i>
+											</a>
 											<ul>
+												{% for m in marques %}
 												<li>
-													<a href="#">Menu Item<i class="fas fa-chevron-down"></i></a>
-													<ul>
-														<li><a href="#">Menu Item<i class="fas fa-chevron-down"></i></a></li>
-														<li><a href="#">Menu Item<i class="fas fa-chevron-down"></i></a></li>
-														<li><a href="#">Menu Item<i class="fas fa-chevron-down"></i></a></li>
-													</ul>
+													<a href="/marques/{{m.id}}">{{m.name}}
+														<i class="fas fa-chevron-down"></i>
+													</a>
 												</li>
-												<li><a href="#">Menu Item<i class="fas fa-chevron-down"></i></a></li>
-												<li><a href="#">Menu Item<i class="fas fa-chevron-down"></i></a></li>
-												<li><a href="#">Menu Item<i class="fas fa-chevron-down"></i></a></li>
+												{% endfor %}
 											</ul>
 										</li>
 										<li class="hassubs">
 											<a href="#">Pages<i class="fas fa-chevron-down"></i></a>
 											<ul>
-												<li><a href="/shop">Shop<i class="fas fa-chevron-down"></i></a></li>
-												<li><a href="/product">Product<i class="fas fa-chevron-down"></i></a></li>
-												<li><a href="/blog">Blog<i class="fas fa-chevron-down"></i></a></li>
-												<li><a href="/blog_single">Blog Post<i class="fas fa-chevron-down"></i></a></li>
-												<li><a href="/regular">Regular Post<i class="fas fa-chevron-down"></i></a></li>
-												<li><a href="/cart">Cart<i class="fas fa-chevron-down"></i></a></li>
-												<li><a href="/contact">Contact<i class="fas fa-chevron-down"></i></a></li>
+												<li>
+													<a href="/shop">Shop
+														<i class="fas fa-chevron-down"></i>
+													</a>
+												</li>
+												<li>
+													<a href="/product">Product
+														<i class="fas fa-chevron-down"></i>
+													</a>
+												</li>
+												<li>
+													<a href="/blog">Blog
+														<i class="fas fa-chevron-down"></i>
+													</a>
+												</li>
+												<li>
+													<a href="/blog_single">Blog Post
+														<i class="fas fa-chevron-down"></i>
+													</a>
+												</li>
+												<li>
+													<a href="/regular">Regular Post
+														<i class="fas fa-chevron-down"></i>
+													</a>
+												</li>
+												<li>
+													<a href="/cart">Cart
+														<i class="fas fa-chevron-down"></i>
+													</a>
+												</li>
+												<li>
+													<a href="/contact">Contact
+														<i class="fas fa-chevron-down"></i>
+													</a>
+												</li>
 											</ul>
 										</li>
 										<li><a href="/blog">Blog<i class="fas fa-chevron-down"></i></a></li>
@@ -264,105 +294,6 @@
 				</div>
 			</nav>
 			
-			<!-- Menu -->
-	
-			<div class="page_menu">
-				<div class="container">
-					<div class="row">
-						<div class="col">
-							
-							<div class="page_menu_content">
-								
-								<div class="page_menu_search">
-									<form action="#">
-										<input type="search" required="required" class="page_menu_search_input" placeholder="Search for products...">
-									</form>
-								</div>
-								<ul class="page_menu_nav">
-									<li class="page_menu_item has-children">
-										<a href="#">Language<i class="fa fa-angle-down"></i></a>
-										<ul class="page_menu_selection">
-											<li><a href="#">English<i class="fa fa-angle-down"></i></a></li>
-											<li><a href="#">Italian<i class="fa fa-angle-down"></i></a></li>
-											<li><a href="#">Spanish<i class="fa fa-angle-down"></i></a></li>
-											<li><a href="#">Japanese<i class="fa fa-angle-down"></i></a></li>
-										</ul>
-									</li>
-									<li class="page_menu_item has-children">
-										<a href="#">Currency<i class="fa fa-angle-down"></i></a>
-										<ul class="page_menu_selection">
-											<li><a href="#">US Dollar<i class="fa fa-angle-down"></i></a></li>
-											<li><a href="#">EUR Euro<i class="fa fa-angle-down"></i></a></li>
-											<li><a href="#">GBP British Pound<i class="fa fa-angle-down"></i></a></li>
-											<li><a href="#">JPY Japanese Yen<i class="fa fa-angle-down"></i></a></li>
-										</ul>
-									</li>
-									<li class="page_menu_item">
-										<a href="#">Home<i class="fa fa-angle-down"></i></a>
-									</li>
-									<li class="page_menu_item has-children">
-										<a href="#">Super Deals<i class="fa fa-angle-down"></i></a>
-										<ul class="page_menu_selection">
-											<li><a href="#">Super Deals<i class="fa fa-angle-down"></i></a></li>
-											<li class="page_menu_item has-children">
-												<a href="#">Menu Item<i class="fa fa-angle-down"></i></a>
-												<ul class="page_menu_selection">
-													<li><a href="#">Menu Item<i class="fa fa-angle-down"></i></a></li>
-													<li><a href="#">Menu Item<i class="fa fa-angle-down"></i></a></li>
-													<li><a href="#">Menu Item<i class="fa fa-angle-down"></i></a></li>
-													<li><a href="#">Menu Item<i class="fa fa-angle-down"></i></a></li>
-												</ul>
-											</li>
-											<li><a href="#">Menu Item<i class="fa fa-angle-down"></i></a></li>
-											<li><a href="#">Menu Item<i class="fa fa-angle-down"></i></a></li>
-											<li><a href="#">Menu Item<i class="fa fa-angle-down"></i></a></li>
-										</ul>
-									</li>
-									<li class="page_menu_item has-children">
-										<a href="#">Featured Brands<i class="fa fa-angle-down"></i></a>
-										<ul class="page_menu_selection">
-											<li><a href="#">Featured Brands<i class="fa fa-angle-down"></i></a></li>
-											<li><a href="#">Menu Item<i class="fa fa-angle-down"></i></a></li>
-											<li><a href="#">Menu Item<i class="fa fa-angle-down"></i></a></li>
-											<li><a href="#">Menu Item<i class="fa fa-angle-down"></i></a></li>
-										</ul>
-									</li>
-									<li class="page_menu_item has-children">
-										<a href="#">Trending Styles<i class="fa fa-angle-down"></i></a>
-										<ul class="page_menu_selection">
-											<li>
-												<a href="#">Trending Styles<i class="fa fa-angle-down"></i></a>
-											</li>
-											<li><a href="#">Menu Item<i class="fa fa-angle-down"></i></a></li>
-											<li><a href="#">Menu Item<i class="fa fa-angle-down"></i></a></li>
-											<li><a href="#">Menu Item<i class="fa fa-angle-down"></i></a></li>
-										</ul>
-									</li>
-									<li class="page_menu_item">
-										<a href="blog.html">blog<i class="fa fa-angle-down"></i></a>
-									</li>
-									<li class="page_menu_item">
-										<a href="contact.html">contact<i class="fa fa-angle-down"></i></a>
-									</li>
-								</ul>
-								
-								<div class="menu_contact">
-									<div class="menu_contact_item">
-										<div class="menu_contact_icon">
-											<img src='{% static "/images/phone_white.png" %}' alt="">
-										</div>+38 068 005 3570
-									</div>
-									<div class="menu_contact_item">
-										<div class="menu_contact_icon">
-											<img src='{% static "/images/mail_white.png" %}' alt="">
-										</div>
-										<a href="mailto:electro@gmail.com">fastsales@gmail.com</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>	
+			<!-- Menu -->	
 	
 		</header>
