--- a/store/templates/footer.html
+++ b/store/templates/footer.html
@@ -36,7 +36,9 @@
 				<div class="col-lg-3 footer_col">
 					<div class="footer_column footer_contact">
 						<div class="logo_container">
-							<div class="logo"><a href="#">ELectro</a></div>
+							<div class="logo">
+								<a href="/">ELectro</a>
+							</div>
 						</div>
 						<div class="footer_title">Got Question ? Call Us 24/7</div>
 						<div class="footer_phone">+212 5 55 55 55</div>
