--- a/store/templates/marque.html
+++ b/store/templates/marque.html
@@ -7,13 +7,32 @@
 <link rel="stylesheet" type="text/css" href='{% static "/styles/blog_styles.css" %}'>
 
 <!-- page title-->
-
-<div class="home">
-    <div class="home_background parallax-window" data-parallax="scroll" data-image-src='{% static "/images/shop_background.jpg" %}'></div>
+<div class="home" style="background-image: url('{% static "/images/shop_background.jpg" %}')">
+    <div class="home_background parallax-window" data-parallax="scroll" ></div>
     <div class="home_overlay"></div>
     <div class="home_content d-flex flex-column align-items-center justify-content-center">
         <h2 class="home_title"> {{ marque.name }}</h2>
     </div>
 </div>
-
+    <div class="container" style="padding-top: 25px;">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card mb-4 box-shadow">
+                    <img src='{% static "/images/best_1.png" %}' width="100%" height="300px"/>		
+                    <div class="card-body">
+                        <p class="card-text">
+                            <a href="/products/1/">name</a>
+                        </p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">Add To Favorite</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">Add To Cart</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% include "footer.html" %}
